# NEW-Lead-Gen

./: .env.example  .gitignore  pyproject.toml
config/: settings.toml
config/agents/: bbb_utah.yaml  career_coaches_utah.yaml  craigslist_provo_jobs_wanted.yaml  craigslist_slc_business.yaml  craigslist_slc_gigs.yaml  craigslist_slc_jobs_wanted.yaml  craigslist_slc_resumes.yaml  deseret_news_jobs.yaml  expired_licenses.yaml  fb_entrepreneur_groups.yaml  fb_job_seeker_groups.yaml  fb_real_estate_groups.yaml  fb_sales_pro_groups.yaml  fb_utah_career_groups.yaml  fb_veteran_transition.yaml  fb_young_professional.yaml  glassdoor_utah.yaml  google_maps_utah.yaml  indeed_utah.yaml  ksl_business_for_sale.yaml  ksl_career_services.yaml  ksl_coaching_consulting.yaml  ksl_gig_workers.yaml  ksl_job_seekers.yaml  ksl_professional_services.yaml  ksl_resume_posts.yaml  ksl_services_offered.yaml  linkedin_articles.yaml  linkedin_career_changers.yaml  linkedin_entrepreneurs.yaml  linkedin_insurance_agents.yaml  linkedin_military_veterans.yaml  linkedin_real_estate_agents.yaml  linkedin_recent_mba_grads.yaml  linkedin_sales_professionals.yaml  linkedin_teachers_leaving.yaml  medium_careers.yaml  real_estate_agents_dir.yaml  reddit_career_guidance.yaml  reddit_fire_utah.yaml  (+7 more)
scripts/: rollback.sh  run_scrape.sh  service.sh  setup_supabase.sql
src/leadgen/: __init__.py  cli.py
tests/: conftest.py
tests/compliance/: test_checker.py
tests/models/: test_lead.py
tests/pipeline/: test_deduplicator.py  test_normalizer.py
tests/scoring/: test_engine.py  test_sentiment.py
(+83 files in other folders)
